[package]
name = "js-error-reporting-server"
version = "0.1.0"
authors = ["Jamie McClymont <jamie@kwiius.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rocket = "0.4.4"
rocket_contrib = "0.4.4"
serde = { version = "1.0.106", features = ["derive"] }
serde_json = { version = "1.0.52", features = ["raw_value"] }
reqwest = { version = "0.10.4", features = ["blocking", "json"] }
chrono = "0.4.11"
backoff = "0.1.6"
tracing = "0.1.13"
tracing-subscriber = "0.2.5"
envy = "0.4.1"
serde_with = { version = "1.4.0", features = ["json"] }
